# climate_corporate_data_filings

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture_er_pipeline.md  data_model.md  requirements.md
agents/: backend.md  database.md  frontend.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: company.py  resolve.py  search.py
backend/app/models/: enums.py  schemas.py
backend/app/pipeline/: confidence.py  orchestrator.py  step1_parse.py  step2_match.py  step3_fetch.py  step4_extract.py  step5_normalize.py  step6_classify.py  step7_store.py
backend/app/services/: claude_extractor.py  discovery_agent.py  pdf_parser.py  serper.py  wikidata.py
supabase/: config.toml
supabase/migrations/: 00001_extensions.sql  00002_enums.sql  00003_reference_tables.sql  00004_company.sql  00005_source_document.sql  00006_emissions_zone.sql  00007_commitment_zone.sql  00008_validation_zone.sql  00009_provenance.sql  00010_er_match_log.sql  00011_indexes.sql  00012_views.sql  00013_triggers.sql  00014_storage.sql  00015_seed_data.sql
